<resources>
    <string name="app_name">HH_Test</string>
    <string name="title_main">Главная</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_account">Аккаунт</string>
    <string name="SearchWork">Поиск работы</string>
    <string name="Search">Поиск</string>
    <string name="Continue">Продолжить</string>
    <string name="LoginWithPassword">Войти с паролем</string>
    <string name="SearchEmployer">Поиск сотрудников</string>
    <string name="AccessToBase">Размещение вакансий и доступ к базе резюме</string>
    <string name="LookingForEmployees">Я ищу сотрудников</string>
    <string name="SentCodeToEmail">Отправили код на %1$s</string>
    <string name="VerifyInfo">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="Confirm">Подтвердить</string>
    <string name="EmailError">Напишите электронное письмо</string>
    <string name="FieldNotFilled">Поле не заполнено</string>
    <string name="Raise">Поднять</string>
    <string name="NumberOfCandidates">Сейчас просматривает %1$d человек</string>
    <string name="ExperiencedYears">Опыт от %1$d года до %1$d лет</string>
    <string name="ReleasedDate">Опубликовано %1$d %1$s</string>
    <string name="Reply">Откликнуться</string>
    <string name="MoreVacancies">Еще %1$d вакансии</string>
    <string name="VacanciesForYou">Вакансии для вас</string>
    <string name="VacanciesNearYou">Вакансии рядом с вами</string>
    <string name="RaiseResume">Поднять резюме в поиске</string>
    <string name="TemporaryWork">Временная работа и подработка</string>
    <string name="UsefulAdvice">Полезные статьи и советы</string>
    <string name="YourResponsibility">Ваши задачи</string>
    <string name="AskQuestion">Задайте вопрос работодателю</string>
    <string name="EmployerAnswer">Он получит его с откликом на вакансию</string>
    <string name="AppliedNumbers">%1$d человек уже откликнулись</string>
    <string name="LookingNumbers">%1$d человека сейчас смотрят</string>
    <string name="RequiredExperience">Требуемый %1$s</string>
    <string name="tempString">-Проектировать пользовательский опыт, проводить UX исследования; -Разрабатывать адаптивный дизайн интерфейса для мобильных приложений; -Разрабатывать быстрые прототипы для тестирования идеи дизайна и их последующая; интеграция на основе обратной связи от команды и пользователей; -Взаимодействовать с командой разработчиков для обеспечения точной реализации ваших дизайнов; -Анализ пользовательского опыта и адаптация под тренды.</string>
    <string name="ResumeForReply">Резюме для отклика</string>
    <string name="AddCoverLetter">Добавить сопроводительное</string>
    <string name="YourCoverLetter">Ваше сопроводительное письмо</string>
    <string name="Favorite">Избранное</string>
    <string name="Replies">Отклики</string>
    <string name="Messages">Сообщения</string>
    <string name="Profile">Профиль</string>
    <string name="RepliedVacancies">%1$d вакансия</string>
    <string name="Logout">Выйти</string>

    <string name="CoursesInOneProject">Тысячи курсов \nв одном месте</string>
    <string name="Register">Регистрация</string>
    <string name="Login">Вход</string>
    <string name="Email">Email</string>
    <string name="Password">Пароль</string>
    <string name="RewritePassword">Повторить пароль</string>
    <string name="ExampleEmail">text@text.text</string>
    <string name="EnterPassword">Введите пароль</string>
    <string name="ReEnterPassword">Введите пароль ещё раз</string>
    <string name="AlreadyHaveAccount">Уже есть аккаунт? <![CDATA[<span style="color:#12B956">Войти</span>]]></string>
    <string name="NoAccount">Нету аккаунта? <![CDATA[<span style="color:#12B956">Регистрация</span>]]></string>
    <string name="ForgotPassword">Забыл пароль</string>
    <string name="odnaklassniki">odnaklassniki</string>
    <string name="vkontakte">vkontakte</string>
    <string name="Main">Главная</string>
    <string name="Favorites">Избранное</string>
    <string name="Account">Аккаунт</string>
    <string name="search_courses">Search courses…</string>
    <string name="ByDateAdded">По дате добавления</string>
    <string name="RublePrice">%1$s ₽</string>
    <string name="More">Подробнее</string>
</resources>