<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="app.market.hh_test.ui.home.HomeFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="app.market.hh_test.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="app.market.hh_test.ui.profile.ProfileFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_profile" />
</navigation>