<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainBlack"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.auth.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto_regular_400"
        android:text="@string/Login"
        android:textColor="@color/MainWhite"
        android:textSize="28sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_medium_500"
        android:text="@string/Email"
        android:textColor="@color/MainWhite"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_light_grey"
        android:fontFamily="@font/roboto_regular_400"
        android:hint="@string/ExampleEmail"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/MainWhite"
        android:textColorHint="@color/LightGreyText"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium_500"
        android:text="@string/Password"
        android:textColor="@color/MainWhite"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:background="@drawable/bg_light_grey"
        android:fontFamily="@font/roboto_regular_400"
        android:hint="@string/EnterPassword"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/MainWhite"
        android:textColorHint="@color/LightGreyText"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/roboto_medium_500"
        android:paddingVertical="12dp"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textColor="@color/MainWhite"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/AlreadyHaveAccount"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_medium_500"
        android:textStyle="bold"
        android:textColor="@color/MainWhite"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ForgotPassword"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_medium_500"
        android:textStyle="bold"
        android:textColor="@color/MainGreen"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/Line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivVK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_vkontakt"
            android:contentDescription="@string/vkontakte"
            android:paddingVertical="2dp"
            android:src="@drawable/ic_vkontakte" />

        <ImageView
            android:id="@+id/ivOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_odnaklasniki"
            android:contentDescription="@string/odnaklassniki"
            android:paddingVertical="2dp"
            android:src="@drawable/ic_odnaklassniki" />

    </LinearLayout>

</LinearLayout>