<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="@dimen/DefaultMarginSize"
    tools:context=".ui.auth.VerifyFragment">

    <TextView
        android:id="@+id/tvSentToEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/DefaultMarginSize"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/ssf_pro_display_medium"
        android:textStyle="bold"
        android:text="@string/SentCodeToEmail"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/DefaultMarginSize"
        android:fontFamily="@font/ssf_pro_display_medium"
        android:text="@string/VerifyInfo"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etVerificationCode1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bg_light_grey"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusForward="@id/etVerificationCode2"
            android:padding="@dimen/DefaultSpacing"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etVerificationCode2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bg_light_grey"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusForward="@id/etVerificationCode3"
            android:padding="@dimen/DefaultSpacing"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etVerificationCode3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bg_light_grey"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusForward="@id/etVerificationCode4"
            android:padding="@dimen/DefaultSpacing"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etVerificationCode4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bg_light_grey"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="1"
            android:padding="@dimen/DefaultSpacing"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvBtnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_blue"
        android:fontFamily="@font/sf_pro_display_regular"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/Confirm"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>